# lightSM

./: AUTHORS  CMakeLists.txt  README
cmake/: FindDBUS.cmake
daemon/: CMakeLists.txt  daemon.h.in  main.c  opt.c  opt.h  pamfile  server.c  systemd.c  user.c
gnome/: CMakeLists.txt  dbus_lang.h  main.c
unit/: CMakeLists.txt  X11.service.in  dbus.service  dbus.socket  gconf.service  gnome-settings-daemon.service  gnome-shell.service  gnome.target  lightSM-gnome.service.in  lightSM@.service.in  pulseaudio.service
x11/: CMakeLists.txt  main.c
