function(add_unitfile mode name)
	if(EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/${name})
		install(FILES ${name} DESTINATION ${CMAKE_INSTALL_LIBDIR}/systemd/${mode})
	elseif(EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/${name}.in)
		configure_file(${name}.in ${name} @ONLY)
		install(FILES ${CMAKE_CURRENT_BINARY_DIR}/${name} DESTINATION ${CMAKE_INSTALL_LIBDIR}/systemd/${mode})
	else()
		message(FATAL_ERROR "file ${name}(.in) not found")		
	endif()
endfunction()
function(activate_unit mode name target)
	execute_process(COMMAND mkdir -p ${CMAKE_CURRENT_BINARY_DIR}/${target})
	execute_process(COMMAND ln -fs ../${name} ${CMAKE_CURRENT_BINARY_DIR}/${target}/${name})
	install(FILES ${CMAKE_CURRENT_BINARY_DIR}/${target}/${name} DESTINATION ${CMAKE_INSTALL_LIBDIR}/systemd/${mode}/${target})
endfunction()

add_unitfile(system lightSM@.service)
add_unitfile(user X11.service)
if(GNOME)
	add_unitfile(user gnome.target)
	add_unitfile(user gnome-shell.service)
	activate_unit(user gnome-shell.service gnome.target.wants)
	add_unitfile(user lightSM-gnome.service)
	activate_unit(user lightSM-gnome.service gnome.target.wants)
	if(MISC_UNIT)
		add_unitfile(user gnome-settings-daemon.service)
		activate_unit(user gnome-settings-daemon.service gnome.target.wants)
	endif(MISC_UNIT)
endif(GNOME)
if(MISC_UNIT)
	add_unitfile(user pulseaudio.service)
	add_unitfile(user dbus.socket)
	add_unitfile(user dbus.service)
	activate_unit(user dbus.socket dbus.target.wants)
endif(MISC_UNIT)